Added refreshing frames